static/css/common.css
body {
  margin: 0;
}

body.no-pad {
  padding: 0;
}

header .menu {
  position: fixed;
  z-index: 41;
  top: 10px;
  left: calc(50vw - 550px);
  height: calc(100vh - 10px);
  width: 170px;
}

header .menu.open {
  transform: translateX(0%);
}

header .mobile-top {
  display: none;
  position: fixed;
  z-index: 42;
  top: 0;
  left: 0;
  width: 100vw;
  height: 50px;
}

header .mobile-bot {
  display: none;
  position: fixed;
  z-index: 40;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 70px;
}

nav {
  position: fixed;
  z-index: 41;
  top: 10px;
  right: calc(50vw - 550px);
  height: calc(100vh - 10px);
  width: 215px;
}

main {
  margin: 0 auto;
  max-width: 640px;
}

@media (max-width: 1100px) {
  body {
    padding: 50px 0 100px;
  }

  main {
    margin: 0 auto;
  }

  nav {
    display: none;
  }

  header .menu {
    left: 0;
    width: 220px;
    padding-left: 15px;
    padding-right: 20px;
    transform: translateX(-100%);
    transition: transform 0.5s;
  }
  
  header .menu.open {
    transform: translateX(0%);
    border-right: 1px solid #ccc;
  }

  header .mobile-top {
    display: flex;
  }

  header .mobile-bot {
    display: flex;
  }
}

.unread {
  background: #f2f3ff !important;
  border-color: #e0e1ff !important;
}

.unread:hover {
  background: #f8f9ff !important;
}

.spinner {
  display: inline-block;
  height: 14px;
  width: 14px;
  animation: rotate 1s infinite linear;
  border: 2px solid;
  border-right-color: transparent;
  border-radius: 50%;
  transition: color 0.25s;
}

.spinner.reverse {
  animation: rotate 2s infinite linear reverse;
}

@keyframes rotate {
  0%    { transform: rotate(0deg); }
  100%  { transform: rotate(360deg); }
}

.reload-page {
  transition: height 0.2s;
  height: 0px;
}

.reload-page.expanded {
  height: 40px;
}

.reload-page:hover {
  text-decoration: underline;
}

*[data-tooltip] {
  position: relative;
}

*[data-tooltip]:hover:before,
*[data-tooltip]:hover:after {
  display: block;
  z-index: 1000;
  transition: opacity 0.01s ease;
  transition-delay: 0.2s;
}

*[data-tooltip]:hover:after {
  opacity: 1;
}

*[data-tooltip]:hover:before {
  transform: translate(-50%, 0);
  opacity: 1;
}

*[data-tooltip]:before {
  opacity: 0;
  transform: translate(-50%, 0);
  position: absolute;
  top: 33px;
  left: 50%;
  z-index: 3000;
  content: attr(data-tooltip);
  background: rgba(17, 17, 17, 0.95);
  font-size: 0.7rem;
  border: 0;
  border-radius: 4px;
  padding: 7px 10px;
  color: rgba(255, 255, 255, 0.925);
  text-transform: none;
  text-align: center;
  font-weight: 500;
  white-space: pre;
  line-height: 1;
  pointer-events: none;
}

*[data-tooltip]:after {
  opacity: 0;
  position: absolute;
  left: calc(50% - 6px);
  top: 28px;
  content: '';
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-bottom: 6px solid rgba(17, 17, 17, 0.95);
  pointer-events: none;
}

.tooltip-nodelay[data-tooltip]:hover:before,
.tooltip-nodelay[data-tooltip]:hover:after {
  transition-delay: initial;
}

.tooltip-right[data-tooltip]:before {
  top: 50%;
  left: calc(100% + 6px);
  transform: translate(0, -50%);
  line-height: 0.9;
}

.tooltip-right[data-tooltip]:after {
  top: 50%;
  left: calc(100% + 0px);
  transform: translate(0, -50%);
  border: 0;
  border-top: 6px solid transparent;
  border-bottom: 6px solid transparent;
  border-right: 6px solid rgba(17, 17, 17, 0.95);
}

.tooltip-left[data-tooltip]:before {
  top: 50%;
  left: auto;
  right: calc(100% + 6px);
  transform: translate(0, -50%);
  line-height: 0.9;
}

.tooltip-left[data-tooltip]:after {
  top: 50%;
  left: auto;
  right: calc(100% + 0px);
  transform: translate(0, -50%);
  border: 0;
  border-top: 6px solid transparent;
  border-bottom: 6px solid transparent;
  border-left: 6px solid rgba(17, 17, 17, 0.95);
}

.tooltip-top[data-tooltip]:before {
  top: unset;
  bottom: 33px;
}

.tooltip-top[data-tooltip]:after {
  top: unset;
  bottom: 28px;
  border: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid rgba(17, 17, 17, 0.95);
}

.grid-post {
  grid-template-columns: 56px 1fr;
}

@media (max-width: 640px) {
  .grid-post {
    grid-template-columns: 46px 1fr;
  }
}

.popup-wrapper {
  background: rgba(0, 0, 0, 0.45);
}

@media (max-width: 640px) {
  .popup-wrapper {
    background: #fff;
  }
}

